Reigional Content + error fix

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -409,6 +409,16 @@ l_english:
  australia_md.109.d: "Our volunteer forces have been engaged for a year in the current conflict should we keep the fight going as it currently is or escalate to a war?"
  australia_md.109.o1: "Escalate the conflict to a war"
  australia_md.109.o2: "Keep our volunteer forces"
+ australia_md.110.t: "West Timor Attempts to Seize Independence"
+ australia_md.110.d: "West Timor has taken advantage of [IND.GetNameDefCap] having existing conflicts with its neighbours and used this opportune timing taking to streets in Kupang City demanding their independence, the cost of enforcing our rule on such a small territory may not be a current priority for our government, how should we respond?."
+ australia_md.110.o1: "Let Timor Unite"
+ australia_md.110.o1: "West Timor is [IND.GetAdjective]"
+ australia_md.111.t: "Indonesia Allows the West Timor Succession"
+ australia_md.111.d: "[IND.GetNameDefCap] has allowed the West Timor Succession to join East Timor rather than have another conflict on another front, they have opted to allow their independence for now."
+ australia_md.111.o1: "This is a great day for Timor"
+ australia_md.112.t: "Indonesia Enforces their Authority"
+ australia_md.112.d: "[IND.GetNameDefCap] has enforced their authority over the West Timor Succession bid to join East Timor, which may result another conflict on another front, they have opted to not allow their independence for now."
+ australia_md.112.o1: "This is a Terrible day for Timor"
 
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
@@ -447,7 +457,9 @@ l_english:
  AST_black_summer_bushfire_damage_effect_tt2: "§YThe Black Summer Bushfires§! have caused §Yvery serious damage§! to our country. §R33§! of our citizens have §Rdied§!. The §Y[AST.Neutral_green_L_icon] [Neutral_green_L]§! ([?party_pop_array^17|Y2%]) will gain §Gsignificant support§! from the increased awareness of the effects of climate change and the implementation of policy that aligns with their platform."
  AST_major_bushfire_damage_effect_tt: "§YMajor Bushfires§! have caused §Rsignificant damage§! to our country and some of our §Rcitizens have died§!."
  AST_minor_bushfire_damage_effect_tt: "§YBushfires§! have caused §Ysome damage§! to our country."
-
+ AST_escalate_conflictPNGACE: "Join the Indonesian-Aceh War"
+ helpyesACE: "Supports Aceh in the Conflict"
+ helpyesIND: "Supports Indonesia in the Conflict"
  AST_test9: "TEST 9"
  AST_test9_desc: "We Should §G$IND_apologize_australia$§  §Hor § §G$IND_confront_australia$§  §Hvia§ §H Focus Tree §"
 #Tech Boosts
@@ -1540,6 +1552,22 @@ l_english:
  AST_Solving_the_Aceh_Issue_desc: "Rebellion in Aceh is a conflict fought by the Free Aceh Movement (GAM) since 1976, with the goal of making the province of Aceh independent from Indonesia. We can take decisive action to end this conflict by offering to send our volunteers to help one side."
  AST_Indonesian_Australian_Timor_Summit: "Indonesian-Australian Timor Summit"
  AST_Indonesian_Australian_Timor_Summit_desc: "[AST.GetNameDefCap] and [IND.GetNameDefCap] have agreed to meet for a diplomatic summit after the violent escalation in East Timor that resulted in the deaths of [AST.GetAdjective] aid workers and civilians during the Timor Independence movement that was met with miliatary force by [IND.GetNameDefCap]."
+ AST_West_Timor_Unrest: "West Timor Unrest"
+ AST_West_Timor_Unrest_desc: "West Timor was orignally divided along the Dutch-Portuguese borders that remain there till this day between Timor and [IND.GetNameDefCap], we will help supply the locals the means to be able to seize on the opportunity that [IND.GetNameDefCap] has its forces occupied elsewhere and push for independence. "
+ AST_Indonesia_Australia_Comprehensive_Economic_Partnership: "Indonesia Australia Comprehensive Economic Partnership"
+ AST_Indonesia_Australia_Comprehensive_Economic_Partnership_desc: "Indonesia is one of our largest trading partners , as they supply Australia with petrochemical products and we supply [IND.GetNameDefCap] raw minerals resources and grain, we will renew our outdated trade agreements to bring prosperity to both nations."
+ AST_Aceh_Munitions_Factories: "Aceh Munitions Factories"
+ AST_Aceh_Munitions_Factories_desc: "Aceh requires its own industrial production capabilities to meet its demands rather than relying on external help we propose to invest into Aceh expanding their construction capabilities and arms production."
+ AST_Joint_Timor_Aid: "Joint Timor Aid"
+ AST_Joint_Timor_Aid_desc: "[IND.GetNameDefCap] has proposed as a way of further mending tensions in our region a small joint aid package to help Timor Stabilise itself."
+ AST_Amboinan_Assistance_request: "Ambonian Assistance Request"
+ AST_Amboinan_Assistance_request_desc: "In 1512, the Portuguese were the first Europeans to land in Ambon, and it alongside Timor became a center for Portuguese activities, The Dutch dispossessed the Portuguese in 1605 and took over the fort. The local people of Ambon are closely tied with Timor and through our contacts there we ahve been told they are looking for a chance at their independence with Timor."
+ AST_Aceh_Malay_Relations: "Aceh-Malay Relations"
+ AST_Aceh_Malay_Relations_desc: "To ensure that no further tensions are raised at the Kalimantan-Borneo border we have proposed a join agreement to facilitate [MAY.GetAdjective] cooperation into the future on behalf of [ACE.GetNameDefCap]. This includes potential further investment opportunities and a non-aggression pact."
+ AST_Indo_Malay_Relations: "Indo-Malay Relations"
+ AST_Indo_Malay_Relations_desc: "The Indonesia–Malaysia confrontation on Borneo confrontation was an armed conflict from 1963 to 1966 that stemmed from Indonesia's opposition to the creation of the state of Malaysia from the Federation of Malaya. To ensure this conflict does not reignite we proposed a meeting between the two nations discussing potential further investment opportunities and a non-aggression pact"
+ AST_The_Papuan_Resolution: "The Papuan Resolution"
+ AST_The_Papuan_Resolution_desc: "[IND.GetLeader] has expressed a desire to unite [PNG.GetNameDefCap] but was always wary of involvement against current european powers, if we utilise an old obscure legal passage from [PAP.GetAdjective] laws, Indonesia will have more legitiamate claim to Papua with our support."
 #military
  AST_ADF: "ADF"
  AST_ADF_desc: ""
