Volga-Don Canal adjustment

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -36,6 +36,7 @@ v1.10.3
   - Nationalizing assets from the Communists will give Communist Cadres Opinion
   - Rebalanced some of China's Communist Cadres and Military gain to make it easier to do specific things
   - Slightly increased manpower given by mobilization
+  - Made it so that you need to be friendly with Russia to pass through the Volga-Don Canal
 
  Bugfix:
   - Fixed a couple focuses for France where the Stage: focuses were going to the wrong continent
