A few new stuff+map bugfix

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -75,8 +75,6 @@ v1.10.3
   - Fixed the international system renting of specific PMCs self-influencing
   - Fixed the inability to ban the Moderate Islamists as a non-Muslim nation (gotta ban the Islamists)
   - Fixed Eastern Europe graphical culture wrongly assigned to Asian countries
-  - Fixed being unable to withdraw Military Advisors from the International System screen and granting you infinite manpower
-  - Fixed the Armenian Uprising not working if you were Armenia instead of Georgia
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
@@ -89,25 +87,21 @@ v1.10.3
   - Adjusted some Kazakh focuses to give ag districts instead of building slots
   - The Ace Pilots can now be female
   - Reworked Libya's Oil Nationalisation mechanic to make the economy a bit more stable
-  - Coptic Egypt can now take the "The Clergy" internal faction
 
  Database:
-  - Rebuilt KOR, JAP, CHI, and TAI OOB, stockpiles, and variants. Also UKR OOB fixes
+  - Rebuilt KOR, JAP, CHI, and TAI OOB, stockpiles, and variants. Also UKR+IRQ OOB fixes
   - Removed variant version numbering for most majors
   - Rebalanced Vietnam's building placement so Ho Chi Minh city has buildings
   - Added Geothermal Energy Production to the following tags: USA, MEX. KEN, ICE
   - Large-scale replacement of PNG format to optimize operation efficiency
   - Added accurate Division namelist to Russia+Korea
-
+  
  Graphics:
   - About 60 3D models and texture
-  - Complete graphical and 3D upgrade for China, South Korea, Japan, and Taiwan
-  - Partial 3D rework for Poland, Czech, Kurdistan, Israel, Hezbollah
-  - New set of generic models
-  - Dozens of new equipment GFX to Russia
+  - Complete equipment GFX + 3D models update for China, South Korea, Japan, and Taiwan
+  - Partial equipment GFX + 3D models update for Poland, Czech, Kurdistan, Israel, Hezbollah, Iraq, Russia, USA
   - 80+ high quality Aces portraits for Asia and USA
   - Set of new buildings. Eiffel tower, Golden Gate, Basil Cathedral, modern airport, modern naval base
-
 
  Localisation
   - Major fixes and improvements to the Russian localization
@@ -124,7 +118,7 @@ v1.10.3
   - River cross fix
   - Russian Central Federal District revamp (complete)
   - Add Huai River
-
+  
  Music:
   - New radio station with 53 minutes of Asian themed music
 
