--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -2617,7 +2617,14 @@
  IRE_APC_1_short: "Timoney APC"
 
  ### Iraq ###
- IRQ_infantry_weapons1: "Tabuk"
+ IRQ_infantry_weapons: "Tabuk AKM"
+ IRQ_infantry_weapons1: "Tabuk DMR"
+ IRQ_infantry_weapons2: "AK-74N"
+ IRQ_infantry_weapons3: "AK-74M"
+ IRQ_infantry_weapons4: "AK-103"
+ IRQ_infantry_weapons5: "AK-12"
+ IRQ_infantry_weapons6: "AK-23"
+ IRQ_infantry_weapons7: "AK-31"
 
  IRQ_SP_arty_1: "Al-Fao"
 
