--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -2227,7 +2227,14 @@
  ISR_Rec_tank_5_short: "M7A2"
  IRE_APC_1: "Transporter opancerzony Timoney"
  IRE_APC_1_short: "Timoney APC"
- IRQ_infantry_weapons1: "Tabuk"
+ IRQ_infantry_weapons: "Tabuk AKM"
+ IRQ_infantry_weapons1: "Tabuk DMR"
+ IRQ_infantry_weapons2: "AK-74N"
+ IRQ_infantry_weapons3: "AK-74M"
+ IRQ_infantry_weapons4: "AK-103"
+ IRQ_infantry_weapons5: "AK-12"
+ IRQ_infantry_weapons6: "AK-23"
+ IRQ_infantry_weapons7: "AK-31"
  IRQ_SP_arty_1: "Al-Fao"
  IRQ_SP_R_arty_0: "Ababeela"
  IRQ_SP_R_arty_1: "Sajeel-60"
