--- a/Changelog.txt
+++ b/Changelog.txt
@@ -95,7 +95,8 @@ v1.10.3
   - Added Geothermal Energy Production to the following tags: USA, MEX. KEN, ICE
   - Large-scale replacement of PNG format to optimize operation efficiency
   - Added accurate Division namelist to Russia+Korea
-  
+  - Coptic Egypt can now take the "The Clergy" internal faction
+
  Graphics:
   - About 60 3D models and texture
   - Complete equipment GFX + 3D models update for China, South Korea, Japan, and Taiwan
@@ -118,7 +119,7 @@ v1.10.3
   - River cross fix
   - Russian Central Federal District revamp (complete)
   - Add Huai River
-  
+
  Music:
   - New radio station with 53 minutes of Asian themed music
 
