--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -1513,12 +1513,12 @@ MEX_a_catholic_government_desc: ""
 
 ### MEXICAN FOREIGN POLICY ###
 
-MEX_mexican_foreign_relations: "Mexican Foreign Relations"
-MEX_mexican_foreign_relations_desc: ""
-MEX_claiming_central_america: "Claiming Central America"
-MEX_claiming_central_america_desc: ""
-MEX_building_southern_defenses: "Building Southern Defenses"
-MEX_building_southern_defenses_desc: ""
+MEX_diplomatic_overture: "Diplomatic Overture"
+MEX_diplomatic_overture_desc: ""
+MEX_path_of_conquest: "Path of Conquest"
+MEX_path_of_conquest_desc: ""
+MEX_defensive_infastructure: "Defensive Infrastructure"
+MEX_defensive_infastructure_desc: ""
 MEX_demanding_guatemalan_submission: "Demanding Guatemalan Submission"
 MEX_demanding_guatemalan_submission_desc: ""
 MEX_invasion_of_honduras: "Invasion of Honduras"
