--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1427,10 +1427,6 @@
  germany.23.t: "EU Sues Germany Over The Volmer Erlass - Germany Wins"
  germany.23.d: "Germanies decision to keep the Volmer decree into action led to the decision by the EU to sue Germany over it. The European Union accused Germany to break our Schengen Agreement and European law in general.\n\nThe battle before the court lasted some months now but in the end, the European Court of Justice ruled that Germanies introduction of the decree didnt break any existing law, as it moved inside the Schengen Agreement."
  germany.23.a: "Great news"
- germany.24.t: "Süssmuth Commission Finishes The Paper"
- germany.24.d: "Lead by Rita Süssmuth the Süssmuth Commission worked out a paper, over the curse of a year, about the importance of immigration for Germany. The paper is just 19 pages long but includes everything, from ideas how to writte future immigration laws, to analysis about our current situation and future predictions.\n\nThe title of the paper is..."
- germany.24.a: "...Shape immigration - Encourage integration"
- germany.24.b: "...Shape immigration - Encourage migration"
  germany.25.t: "Nobody Likes The Ökosteuer"
  germany.25.d: "The 'Ecotax' was a project from the green party B90/Grüne and meet many resistances, even from its coalition partner the CDU. As soon as it was introduced, the courts were flooded with constitutional lawsuits from the Association of Taxpayers, Associations of freight forwarders and the Association of cold stores. In a public action, the liberal party FDP paid the tax costs of all fuels at a fuel station in Berlin. 300 people could refuel this way for extremely cheap prices."
  germany.25.a: "Just because we increased the tax rate a little bit..."
@@ -1470,7 +1466,7 @@
  germany.35.d: "The Dresdner Bank is Germanies second-biggest Bank and became famous during WW2 as the house bank of the SS. The Allianz AG on the other hand is Europes biggest insurance company based in Munich.\n\nThis is already the third time that a company wants to merge with the Dresdner Bank. The first try was by the Deutsche Bank in 2000, then came the Commerzbank in the same year and now the financial world looks again to Frankfurt, watching out for there possible next big concurrent. The Allianz AG wants to build-up there banking sector, as right now its mostly just involved in the insurance area. But with this merge, one of the biggest Bank in the world would emerge in Frankfurt, with 68 Billion equity, 170.000 employees in over 80 countries, total assets of 1.6 trillion Mark and a market value of over 200 billion Mark.\n\nThe deal will be Financed by the sale of the Allianz AG shares of the other banks in Germany while at the same time it will buy their shares of the Dresdner Bank."
  germany.35.a: "Hopefully this time everything will be alright"
  germany.36.t: "Berlin banking scandal"
- germany.36.d: "The leaders of the Berlin city administration met yesterday in emergency session yesterday to discuss the German capital's worst financial crisis since the second world war. The crisis is a huge blow to Berlin's ambition to become the "Capital of Europe" and poses an immediate threat to some of the continent's most treasured cultural assets"
+ germany.36.d: "The leaders of the Berlin city administration met yesterday in emergency session yesterday to discuss the German capital's worst financial crisis since the second world war. The crisis is a huge blow to Berlin's ambition to become the ´Capital of Europe´ and poses an immediate threat to some of the continent's most treasured cultural assets"
  germany.36.a: "Okay"
  germany.37.t: "Investigative committee"
  germany.37.d: "TODO"
@@ -1933,6 +1929,25 @@
  Germany_Mech.20.d: "Some generals and right-wing extremists have joined forces in an attempted coup, seizing command of parts of the Bundeswehr. Fortunately, the coup was thwarted because the majority of the troops still support the constitution and remained loyal to the democratic order. Despite this success, we are now faced with a critical decision: determining who will lead our defense moving forward. This leadership must be committed to upholding our democratic values and ensuring the stability and integrity of our armed forces. It is imperative that we carefully choose individuals who will restore confidence and maintain order within our military ranks."
  Germany_Mech.20.a: "Schneiderhahn will save us"
  Germany_Mech.20.b: "Tiger-Willi is the only right choice"
+
+#MIGRATION
+ Germany_mig.1.t: "Süssmuth Commission Come To Work"
+ Germany_mig.1.d: "Otto Schilly, the Minister of the Interior appoint a commission to review and propose comprehensive reforms to our migration and integration policies."
+ Germany_mig.1.a: "interesting"
+ Germany_mig.2.t: "Süssmuth Commission Finishes The Paper"
+ Germany_mig.2.d: "Lead by Rita Süssmuth the Süssmuth Commission worked out a paper, over the curse of a year, about the importance of immigration for Germany. The paper is just 19 pages long but includes everything, from ideas how to writte future immigration laws, to analysis about our current situation and future predictions.\n\nThe title of the paper is..."
+ Germany_mig.2.a: "...Shape immigration - Encourage integration"
+ Germany_mig.2.b: "...extravagant toilet paper"
+ Germany_mig.3.t: "Debate The Results Of The Süssmuth Commission"
+ Germany_mig.3.d: "Shape immigration - Encourage integration\n\nThis is the Title of the Report we have to argue about today to find a solution Migration and Integration.\n\nWe need to..."
+ Germany_mig.3.a: "...keep a restrictiv Migration policy"
+ Germany_mig.3.b: "...adapt to the results of the Paper, even if we are uncertain about"
+ Germany_mig.3.c: "...make migration easier, we need migration because of our demographic, their is no other way"
+ Germany_mig.4.t: "The Greencard Initiative"
+ Germany_mig.4.d: "the German Green Card initiative is a pioneering effort to meet the urgent demand for IT professionals and to ensure that Germany remained competitive in the rapidly evolving global technology landscape."
+ Germany_mig.4.a: "This is Great"
+ Germany_mig.4.b: "We should expand this for skilled workers, too"
+ Germany_mig.4.c: "Care for our own demographics and education, we have already to much foreigners"
 
 
 
