--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -187,6 +187,7 @@ Some texture by armeeoffizier.ch
 BRA camo texture by Guilmann
 French Centre Europe Camo by Thimbleweed
 Hungary Camo by MrGnodski
+Some monuments by Owl from the mod "Landmarks Project Revived"
 
 Music authors for Asia radio
 Makai Symphony https://www.youtube.com/@Makai-symphony
