--- a/Changelog.txt
+++ b/Changelog.txt
@@ -102,7 +102,9 @@ v1.10.3
   - Complete equipment GFX + 3D models update for China, South Korea, Japan, and Taiwan
   - Partial equipment GFX + 3D models update for Poland, Czech, Kurdistan, Israel, Hezbollah, Iraq, Russia, USA
   - 80+ high quality Aces portraits for Asia and USA
-  - Set of new buildings. Eiffel tower, Golden Gate, Basil Cathedral, modern airport, modern naval base
+  - Set of new landmarks. Eiffel tower: Golden Gate, Basil Cathedral, Christ Redeemer, Statue of Liberty, Capitol and Obelisk, Kabaah, Dome of the Rock, Great wall,
+    Pyramids, Empire States Building, Okayama Castle, Himeji Castle, and Fujisan
+  - Set of new generic modern buildings. Airport, Naval Base, Supply Base, Factory
 
  Localisation
   - Major fixes and improvements to the Russian localization
