--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -2,6 +2,7 @@
 l_english:
  australia_focus: "Australia Focus Tree"
 
+ 
 #Decision
  AST_diplo_tug_of_war: "Australian Diplomatic Tug of War"
  AST_diplo_tug_of_war_desc: "§5Australia§! currently exists in a state of sway between the two major superpowers of The §3United States§! and §tChina§!. With both countries trying to exert influence on our country. Through trade and political actions we can influence this to our advantage."
@@ -13,6 +14,12 @@ l_english:
  AST_diplo_tug_of_war_CHI_cat_desc: "TEST"
  AST_USA_test1: "Maintain US Trade"
  AST_CHI_test1: "Expand Chinese Trade"
+ USA.AST_USA_trade_influence: "USA-Australian Diplomatic Influence"
+ AST_Negotiate_USA_troop_support_dec: "Negotiate USA troop support"
+ USA_trade_influnce_above_50: "§GRequires § §G50 § §GUSA§" 
+ USA_trade_influnce_above_50_blocked: "§RRequires § §G50 § §GUSA§"
+ USA_trade_influnce_above_50_tooltip: "§YRequires § §G50 § §GUSA § Trade Influence"
+
 
 #Events
  australia_md.2.t: "Anzac-Class Frigate Construction"
@@ -418,6 +425,9 @@ l_english:
  australia_md.112.t: "Indonesia Enforces their Authority"
  australia_md.112.d: "[IND.GetNameDefCap] has enforced their authority over the West Timor Succession bid to join East Timor, which may result another conflict on another front, they have opted to not allow their independence for now."
  australia_md.112.o1: "This is a Terrible day for Timor"
+ australia_md.113.t: "Memorial for the Battle of Kapyong"
+ australia_md.113.d: "A memorial service was held honour the fallen Australian soldiers that fought bravely in the battle of Kapyong on 22–27 April 1951 to help secure Korean freedom. Outnumbered ten to one by the advancing Chinese army they managed to hold out inflicting upwards of 5000 enemy casualties and many wounded, whilst only receiving 59 KIA and 111 wounded, The Australian 16th Field Regiment was later awarded the South Korean Presidential Unit Citation for its actions."
+ australia_md.113.o1: "Lest We Forget"
 
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
@@ -465,6 +475,7 @@ l_english:
  AST_anzac-class: "Anzac-Class Advancements"
 
 #Ideas
+ AST_USA_SOLDIERS_IDEA: "USA Troop Support for Australia" 
  AST_Joint_Forces_Training_Operations_half_idea: "Half-funded Joint Operations Training"
  AST_Joint_Forces_Training_Operations_Full_idea: "Fully-funded Joint Operations Training"
  AST_PNG_Nationalism_idea: "Papuan Nationalism"
@@ -601,8 +612,10 @@ l_english:
  AST_expadning_wind_farms_desc: ""
  AST_idea_national_bushfire_strategy: "National Bushfire Strategy"
  AST_ides_national_bushfire_strategy_desc: "The country has implemented a national bushfire strategy to minimise the loss of life and damage caused by severe bushfires. With better equipment, planning and training, the country is better prepared than most to deal with the rising threat of bushfires."
-
-
+ AST_Remembering_the_Battle_of_Kapyong: "Remebering the Battle of Kapyong"
+ AST_Remembering_the_Battle_of_Kapyong_desc: "The Battle of Kapyong  22–27 April 1951 , was fought by approx 2000 troops consisting of Australians, Canadians, and New Zealand support troops against the 20,000 man strong Chinese Army that was advancing southward, outnumbered ten to one they bravely held off the PVA advance inflicting 5000 KIA and many wounded whilst only suffering 59 KIA and 111 wounded. The Australian 16th Field Regiment was later awarded the South Korean Presidential Unit Citation for its actions."
+ AST_Korea_Australia_Free_Trade_Agreement: "Korea-Australia Free Trade Agreement"
+ AST_Korea_Australia_Free_Trade_Agreement_desc: "The Korea–Australia Free Trade Agreement (KAFTA) is a bilateral agreement seeking to reduce trade and investment barriers between Australia and South Korea. It provides Australian goods exporters, service providers and investors with significantly improved access to the South Korean market."
 
  #spelling mistakes below in focus/ideas names *union* *resistance* *treaty*- req to change both, leaving functional. moredps
  AST_auto_untions: "Auto Unions"
@@ -1533,7 +1546,7 @@ l_english:
  AST_Whaling_in_our_Antarctic_Sea_desc: "Australia will sue Japan at the International Court of Justice (ICJ), arguing that Japan's program was actually not for scientific purposes, but was instead a cover for a commercial whaling program."
  whaling_dispute_mod: "Sued Japan at ICJ for Whaling"
  AST_The_Senkaku_Daiyou_Islands: "The Senkaku Daiyou Islands"
- AST_The_Senkaku_Daiyou_Islands_desc: "[CHI.GetNameDefCap] has made a historical claim to the Senkaku-Daiyou Islands these islands are currently under the administration of [JAP.GetNameDefCap], our government will support the [CHI.GetAdjective] claim to these Islands. This may §G Increase § the chance §Y that Japan agrees to transfer § §GSenkaku Islands§ §Y to China.§"
+ AST_The_Senkaku_Daiyou_Islands_desc: "[CHI.GetNameDefCap] has made a historical claim to the Senkaku-Daiyou Islands, these islands are currently under the administration of [JAP.GetNameDefCap], our government will support the [CHI.GetAdjective] claim to these Islands. This may §G Increase § the chance §Y that Japan agrees to transfer § §GSenkaku Islands§ §Y to China.§"
  AST_Chinese_support_for_senkaku_dec: "Leverage the Support for China in Senkaku"
  supported_china_daiyou_mod: "Supported our claim to Daiyou Islands"
  supported_china_senkaku_mod: "Supported China's Claim to our Senkaku Island"
@@ -1560,13 +1573,71 @@ l_english:
  AST_Joint_Timor_Aid: "Joint Timor Aid"
  AST_Joint_Timor_Aid_desc: "[IND.GetNameDefCap] has proposed as a way of further mending tensions in our region a small joint aid package to help Timor Stabilise itself."
  AST_Amboinan_Assistance_request: "Ambonian Assistance Request"
- AST_Amboinan_Assistance_request_desc: "In 1512, the Portuguese were the first Europeans to land in Ambon, and it alongside Timor became a center for Portuguese activities, The Dutch dispossessed the Portuguese in 1605 and took over the fort. The local people of Ambon are closely tied with Timor and through our contacts there we ahve been told they are looking for a chance at their independence with Timor."
+ AST_Amboinan_Assistance_request_desc: "In 1512, the Portuguese were the first Europeans to land in Ambon, and it alongside Timor became a center for Portuguese activities, The Dutch dispossessed the Portuguese in 1605 and took over the fort. The local people of Ambon are closely tied with Timor and through our contacts there we have been told they are looking for a chance at their independence with Timor."
  AST_Aceh_Malay_Relations: "Aceh-Malay Relations"
  AST_Aceh_Malay_Relations_desc: "To ensure that no further tensions are raised at the Kalimantan-Borneo border we have proposed a join agreement to facilitate [MAY.GetAdjective] cooperation into the future on behalf of [ACE.GetNameDefCap]. This includes potential further investment opportunities and a non-aggression pact."
  AST_Indo_Malay_Relations: "Indo-Malay Relations"
  AST_Indo_Malay_Relations_desc: "The Indonesia–Malaysia confrontation on Borneo confrontation was an armed conflict from 1963 to 1966 that stemmed from Indonesia's opposition to the creation of the state of Malaysia from the Federation of Malaya. To ensure this conflict does not reignite we proposed a meeting between the two nations discussing potential further investment opportunities and a non-aggression pact"
  AST_The_Papuan_Resolution: "The Papuan Resolution"
  AST_The_Papuan_Resolution_desc: "[IND.GetLeader] has expressed a desire to unite [PNG.GetNameDefCap] but was always wary of involvement against current european powers, if we utilise an old obscure legal passage from [PAP.GetAdjective] laws, Indonesia will have more legitiamate claim to Papua with our support."
+ AST_Dialogue_with_the_North: "Dialogue With the North"
+ AST_Dialogue_with_the_North_desc: "We have had extreme difficulty in setting up a meeting with [NKO.GetNameDefCap] to discuss further political relations, although a direct meeting between our leaders was unable to be scheduled, a diplomatic exchange has been set up via our [KOR.GetAdjective] friends."
+ AST_Stepping_over_the_DMZ: "Stepping over the DMZ"
+ AST_Stepping_over_the_DMZ_desc: "Since relations between [KOR.GetNameDefCap] and [NKO.GetNameDefCap] have improved recently our diplomats are currently engaged in discussion with [NKO.GetNameDefCap] to facilitate a non-aggression pact with the North in the hope of a potenital peaceful resolution for the entire Korean peninsula."
+ AST_Push_To_The_38th_Parallel: "Engagement at the 38th Parallel"
+ AST_Push_To_The_38th_Parallel_desc: "Now that hostilities have resumed between [KOR.GetNameDefCap] and [NKO.GetNameDefCap] , we will once again come to the aid of our old ally [KOR.GetNameDefCap], and resume the battle our soldiers fought bravely in over 70 years ago."
+ AST_Hyundai_Rotem_Technologies: "Hyundai Rotem Technologies"
+ AST_Hyundai_Rotem_Technologies_desc: "Hyundai Rotem is a South Korean company that manufactures rolling stock, defense products and plant equipment. [AST.GetNameDefCap] will purchase Tank Designs and specifications from [KOR.GetNameDefCap] saving us valuable time in research and development by utilising the advancements made by Hyundai Rotem."
+ AST_Diplomacy_for_Major_Powers: "Diplomacy for Major Powers"
+ AST_Diplomacy_for_Major_Powers_desc: "[AST.GetAdjective] diplomats need to be advised of our lastest policies to engage major countries on [AST.GetLeader]'s behalf, this will quickly brief them so that they may better represent our interests."
+ AST_Invest_into_Hong_Kong: "Invest into Hong Kong"
+ AST_Invest_into_Hong_Kong_desc: "The option to invest into the free market in Hong Kong may prove to be a lucrative investment for [AST.GetNameDefCap] as well as improving our relations with [CHI.GetNameDefCap]."
+ AST_Support_PRC_China: "Support PRC China"
+ AST_Support_PRC_China_desc: "We can opt to publicly state a change in our diplomatic allegances from supporting the western backed [TAI.GetNameDefCap] to supporting [CHI.GetNameDefCap]  our relations with [USA.GetNameDefCap] will be jeopordised severly, however our new partner [CHI.GetNameDefCap] may be more than happy to assist us for our support. "
+ AST_Support_Taiwan_ROC: "Support Taiwan ROC"
+ AST_Support_Taiwan_ROC_desc: "[AST.GetLeader] can make a public statement of commitment to our support on [TAI.GetAdjective] sovereignity, [AST.GetNameDefCap] will also provide logistical supplies and have an increased prescense in the maritime straight. [TAI.GetNameDefCap] and [USA.GetNameDefCap] relations towards [AST.GetNameDefCap] should improve. "
+ AST_The_Forgotten_Incursion_flag: "Has not already supported [CHI.GetNameDefCap] Claim to Senkaku-Daiyou"
+ AST_CHI_trade_idea: "Australian Chinese Trade"
+ AST_CHI_trade1_idea: "Improved Chinese Trade"
+ AST_Taiwanese_Military_Joint_Exercises_idea: "Taiwanese Military Joint Exercises"
+ AST_Taiwanese_Military_Joint_Exercises: "Taiwanese Military Joint Exercises"
+ AST_Taiwanese_Military_Joint_Exercises_desc: "[TAI.GetNameDefCap] will host Joint military exercises with [AST.GetNameDefCap] primarily focusing on confronting potential [CHI.GetAdjective] aggression in the Taiwanese Strait, this will provide both our armies valuable insight the realities of deploying operations together in the area."
+ AST_A_Growing_Trade_Partner: "A Growing Trade Partner"
+ AST_A_Growing_Trade_Partner_desc: "[CHI.GetNameDefCap] has become one of our largest importers of a raw resources such as high quality iron ore, zinc and bauxite as well as agricultural goods, we should meet the growing demand from East Asia and devote our time to improving our trade relations with [CHI.GetNameDefCap]."
+ AST_Trade_and_Economic_Cooperation_Framework: "Trade and Economic Cooperation Framework"
+ AST_Trade_and_Economic_Cooperation_Framework_desc: "China has become Australia's largest two-way trading partner, accounting for 27 per cent of our goods and services trade, we need to establish a framework to futher our economic ties with [CHI.GetNameDefCap]."
+ AST_China_Australia_Free_Trade_Agreement: "China Australia Free Trade Agreement"
+ AST_China_Australia_Free_Trade_Agreement_desc: "The China Australia Free Trade Agreement will provide enormous benefits to Australia, enhancing our competitive position in the Chinese market, boosting economic growth and creating jobs. The agreement unlocks significant opportunities for Australia in China, accounting for nearly a third of total exports, and a steady source of foreign investment."
+ AST_Reshaping_our_strategic_Alliances: "Reshaping our Strategic Alliances"
+ AST_Reshaping_our_strategic_Alliances_desc: "A shift in a global policy is required to adapt the current realities of the geopolitical landscape, which now heavily favors China in our domestic policymaking. It is time to shed the last vestiges of US hedgemony and walk together with China towards a new future. "
+ AST_UN_Convention_Law_Of_The_Sea: "United Nations Convention Law Of The Sea"
+ AST_UN_Convention_Law_Of_The_Sea_desc: "China has been called diplomatically to ratify the UN Convention Law Of the Sea (UNCLOS). UNCLOS allows state parties to claim 12-nm territorial seas and 200-nm EEZs around their coastlines and “naturally formed” land features that can sustain human habitation, we will side with [CHI.GetNameDefCap] and voice our opposition to this western motivated endeavour. "
+ AST_Expansion_into_the_South_China_Sea: "Expansion into the South China Sea"
+ AST_Expansion_into_the_South_China_Sea_desc: "After [CHI.GetNameDefCap] refused to ratify UNCLOS, they have been pursuing an agenda of rapid expanison into the South China Seas islands, we will provide engineering assistance to help [CHI.GetNameDefCap] complete their projects in the region."
+ AST_South_China_Seas_Militarisation: "South China Seas Militarisation"
+ AST_South_China_Seas_Militarisation_desc: "With our assitance the islands in the South China Sea are capable of supporting military infrastructure, The islands will be upgraded with airports and improved dockyards to provide a strategic advantage to any future conflict that crosses the South China Sea."
+ AST_The_Senkaku_Daiyou_Islands1: "The Chinese Claim to Senkaku Daiyou Islands"
+ AST_The_Senkaku_Daiyou_Islands1_desc: "[CHI.GetNameDefCap] has made a historical claim to the Senkaku-Daiyou Islands, these islands are currently under the administration of [JAP.GetNameDefCap], our government will support the [CHI.GetAdjective] claim to these Islands. This may §G Increase § the chance §Y that Japan agrees to transfer § §GSenkaku Islands§ §Y to China.§"
+ AST_The_Taiwanese_Strait: "The Taiwanese Strait"
+ AST_The_Taiwanese_Strait_desc: "Now that the die has been cast, we have put our alliegance behind the more worthy nation of our support, we should start implementing a joint strategy to deal with their most likely source of conflict."
+ AST_The_Chinese_Unification_War: "The Chinese Unification War"
+ AST_The_Chinese_Unification_War_desc: "The Chinese Civil War was fought between the Kuomintang-led government of the Republic of China and the forces of the Chinese Communist Party, with armed conflict continuing intermittently from 1 August 1927, now with the resuming of hostilities across the Taiwanese Strait we should help in all capabilities to bring a swift decisive victory to hand."
+ AST_Nation_of_Taiwan_FTA: "Nation of Taiwan FTA"
+ AST_Nation_of_Taiwan_FTA_desc: "A trade agreement will be entered into with Taiwan to fully realise the domestic growth potential both countries offer to each other, and that our industries are complimentary to each other such as [TAI.GetNameDefCap] has its high tech machinery and computing products, and [AST.GetNameDefCap] can provide the raw resources needed to supply those industries."
+ AST_Microprocessor_Manufacting_Expertise: "Microprocessor Manufacting Expertise"
+ AST_Microprocessor_Manufacting_Expertise_desc: "Taiwan produces about 90% of the world's most advanced semiconductors, mostly through the Taiwan Semiconductor Manufacturing Co Ltd (TSMC), the world's largest producer and a major Apple and Nvidia supplier, A purchase request for Intellectual propeties will be acquired from [TAI.GetNameDefCap] for Semiconductors and Microchips."
+ AST_The_One_True_Republic_of_China: "The One True Republic of China"
+ AST_The_One_True_Republic_of_China_desc: "Since the fragmentation of China began in 1927 a dream to realise a Unity under the legitimate rulers of China the Kuomintang has burned brightly, We will provide support to [TAI.GetNameDefCap] for this noble endeavour to Re-unite their people."
+ AST_Glory_to_the_Kuomintang: "Glory to the Kuomintang"
+ AST_Glory_to_the_Kuomintang_desc: "With the Fall of Beijing the [CHI.GetAdjective] army has been pushed from their Capital and the [CHI.GetAdjective] people freed from the yoke of harsh communist oppression, in our actions we have continued to lay the foundations for a whole China to be reborn."
+ AST_Invest_in_Taipei: "Invest in Taipei"
+ AST_Invest_in_Taipei_desc: "A recommendation has been put forth by our economic minister that we should invest in Taipei, to capitalise on the [TAI.GetNameDefCap] economy, and grow future business opportunities. "
+ AST_Taiwanese_Production_Plants: "Taiwanese Production Plants"
+ AST_Taiwanese_Production_Plants_desc: "If [TAI.GetNameDefCap] is to defend itself into the future, it is in our own interest to help them meet their required demands for military good, as we ahve an excess of materials that can be supplied, in additon we will facilitate the construction of Military factories and civilian factories to support their production."
+ AST_Taiwainese_University_and_Education_Collaboration: "Taiwainese University and Education Collaboration"
+ AST_Taiwainese_University_and_Education_Collaboration_desc: "A University and Education Collaboration between our two nations would be beneficial to both our scientific commities as whole, this proram will help our scientists overcome funding issues which will spearhead breakthroughs in critical technologies for our nations."
+ AST_Keeping_the_Status_Quo: "Keeping the Status Quo"
+ AST_Keeping_the_Status_Quo: 'Rather than taking a confrontational approach it is more pragmatic to use peaceful means to gain regional security for our nations and for our friends too, [AST.GetLeader] has made a public statement affirming our neutrality on  the China-Taiwan relations issue for now.'
 #military
  AST_ADF: "ADF"
  AST_ADF_desc: ""
