--- a/Changelog.txt
+++ b/Changelog.txt
@@ -75,6 +75,7 @@ v1.10.3
   - Fixed the international system renting of specific PMCs self-influencing
   - Fixed the inability to ban the Moderate Islamists as a non-Muslim nation (gotta ban the Islamists)
   - Fixed Eastern Europe graphical culture wrongly assigned to Asian countries
+  - Fixed incorect Polish army general portraits
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
