Iran Parliament improvements, Iraqi bug fixes + event chain

--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -657,7 +657,6 @@
  iraqi_events.1.t: "New Year Reports"
  iraqi_events.1.d: "As the year 2000 dawns upon Iraq, the nation finds itself grappling with a host of formidable challenges that threaten its stability and progress. Iraq continues to grapple with the suffocating impact of international sanctions imposed following the Gulf War. These sanctions have severely hampered the country's ability to rebuild its infrastructure, revive its economy, and provide essential services to its citizens. The restrictions on trade and financial transactions have resulted in a stagnant economy, high unemployment rates, and widespread poverty. The scarcity of resources and limited access to vital technologies further exacerbate Iraq's struggles. Furthermore, Iraq's political isolation persists as suspicions linger among the international community regarding the government's pursuit of weapons of mass destruction and its alleged human rights abuses. This isolation hampers Iraq's ability to establish fruitful diplomatic relations, engage in mutually beneficial partnerships, and regain its rightful place in the global stage. Internally, Iraq faces deep-seated social discontent arising from the mismanagement of resources, systemic corruption, and inadequate public services. These issues have led to public frustration, deteriorating trust in the government, and a growing sense of disillusionment among the population. Addressing these grievances is crucial for fostering social cohesion and ensuring the well-being of the Iraqi people."
  iraqi_events.1.a: "Interesting"
-
  iraqi_events.2.t: "Iraq asks for our aid"
  iraqi_events.2.d: "With the aftermath of the war in Iraq and the start of a new Democratic government appointed by the West in it, it seems the odds are not too much in favor of this new-found government. Hence, they are asking for aid from their allies, which are us. So, how should we respond to their proposal for aid?"
  iraqi_events.2.a: "We help them!"
@@ -1486,6 +1485,33 @@
  iraq_yearly.3.d: "Some units from the Iranian side of the border have crossed illegally into Iraq, creating much discourse within our Joint Chiefs of Staff. It is clear that we must now take a stance on this incursion into Iraqi territory."
  iraq_yearly.3.a: "Respond Now!"
  iraq_yearly.3.b: "I Don't Care"
+
+ iraq_md.100.t: "Iraq Installs Shi'ite Government"
+ iraq_md.100.d: "The Iraqi people have overthrown the ruling state, and installed their very own Shi'ite government. This move brings about a glimmer of hope, as we can once more, make an attempt to restore our Iranian friends to their former way of life."
+ iraq_md.100.a: "We must do it"
+ iraq_md.100.b: "No, it is a bad idea"
+
+ iraq_md.101.t: "Hezbollah Sends a Request"
+ iraq_md.101.d: "Hezbollah has sent us a very interesting offer, they are asking us for our help in restoring the former Islamic Republic, potentially opening up space for a greater alliance in the region."
+ iraq_md.101.a: "We must do it"
+ iraq_md.101.b: "No, it is a bad idea"
+
+ iraq_md.102.t: "[FROM.GetName] Accepts"
+ iraq_md.102.d: "The government of [FROM.GetName] has accepted our request, and will join up in arms against the tyrant, [PER.GetLeader]. Soon, our Islamic Brethern will rise up once more in Iran!"
+ iraq_md.102.a: "Forward!"
+
+ iraq_md.103.t: "[FROM.GetName] Rejects!"
+ iraq_md.103.d: "The government of [FROM.GetName] has rejected our plea to join up in arms against the tyrant, [PER.GetLeader]. Maybe at another time we will be able get them ourselves."
+ iraq_md.103.a: "Damn"
+
+ iraq_md.104.t: "The Day of Action"
+ iraq_md.104.d: "Today will be the day of action, one that the world will never forget. The Islamic Republic will re-emerge as the dominant power in Iran, and the infidels will be ousted."
+ iraq_md.104.a: "It's time"
+ iraq_md.104.b: "Actually, I changed my mind"
+
+ iraq_md.105.t: "Axis of Resistance Plots Against Us!"
+ iraq_md.105.d: "The Axis of Resistance, being spearheaded by Hezbollah, invited Iraq to their faction a little while ago. This comes as the revolution in Iraq sweeped up control out from under the Americans. Now reports are suggesting that the Axis of Resistance plans an operation to oust our government, and re-install the Islamic Republic. Alledgedly, following our revolution several units of the IRGC fled to different parts of the middle east remaining largely undetected. We may be confronted with their units when the time comes."
+ iraq_md.105.a: "What?"
  # Ideas
  IRQ_controlled_instability_idea: "Controlled Instability"
  IRQ_nuclear_experts: "Nuclear Experts"
@@ -1859,7 +1885,8 @@
  IRQ_invite_arabia: "Invite [SAU.GetFlag] [SAU.GetName]"
  IRQ_invite_bahrain: "Invite [BHR.GetFlag] [BHR.GetName]"
  IRQ_invite_yemen: "Invite [YEM.GetFlag] [YEM.GetName]"
- # ETC
+ # Tooltips
+ IRQ_will_lead_us_to_war_TT: "§RWe will be dragged into the conflict with Iran when Hezbollah triggers the war!§!"
  IRQ_if_we_accept_TT: "§HEffect if we accept:§!"
  IRQ_meets_requirements_TT: "§HSunni Satisfaction§! is §H40§! or more\n§HSunni Influence§! is less than §H35§!\n§HSunni Radicalization§! is less than §H25§!"
  IRQ_play_junta_TT: "Will play as the §OMilitary Junta§!"
