--- a/localisation/english/MD_internal_factions_l_english.yml
+++ b/localisation/english/MD_internal_factions_l_english.yml
@@ -379,7 +379,7 @@
  has_the_donju_tt: "$the_donju$"
 
  # The Bazaar
- the_bazaar: "The Bazaar"
+ the_bazaar: "Bāzārhā-ye Irān"
  the_bazaar_desc: "Iran's small and medium businesses go under the traditional name of the bazaar. With its influence nearly unparalleled, appeasing its interests is always a top priority."
  the_bazaar_dynamic_modifier: "£pol_idea $the_bazaar$"
  the_bazaar_opinion_tt: "$opinion_tick_rate_tt$Opinion of §Y$the_bazaar$§!: [TBAZ_opinion_display]\n\n§YEffects from opinion:§!\n$MODIFIER_STABILITY_FACTOR$: [?THIS.TBAZ_stability_factor|+%]\n$modifier_production_speed_industrial_complex_factor$: [?THIS.TBAZ_production_speed_industrial_complex_factor|+%]\n$MODIFIER_CONSUMER_GOODS_FACTOR$: [?THIS.TBAZ_consunmer_goods_factor_var|Y%]\n"
