--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -399,13 +399,13 @@
  STATE_398: "Cape Verde"
  STATE_399: "Khuzestan"
  STATE_400: "Fars"
- STATE_401: "Sistan-Balochistan"
+ STATE_401: "Sistan o Balochistan"
  STATE_402: "Razavi Khorasan"
  STATE_403: "Mazandaran"
  STATE_404: "Markazi"
  STATE_405: "Tehran"
  STATE_406: "Lorestan"
- STATE_407: "East Azerbaijan"
+ STATE_407: "Azarbaijan-e Sharqi"
  STATE_408: "Kordestan"
  STATE_409: "Herat"
  STATE_410: "Bactria"
@@ -977,7 +977,7 @@
  STATE_976: "Esfahan"
  STATE_977: "Kerman"
  STATE_978: "Hormuzgan"
- STATE_979: "West Azarbaijan"
+ STATE_979: "Azarbaijan-e Gharbi"
  STATE_980: "Meghalya"
  STATE_981: "Tripura"
  STATE_982: "Sikkim"
@@ -1148,8 +1148,8 @@
  STATE_1147: "Yazd"
  STATE_1148: "Hamadan"
  STATE_1149: "Semnan"
- STATE_1150: "North Khorasan"
- STATE_1151: "South Khorasan"
+ STATE_1150: "Khorasan Shomali"
+ STATE_1151: "Khorasan Janubi"
  STATE_1152: "Rigestan"
  STATE_1153: "Nuristan"
  STATE_1154: "Kunar"
