--- a/localisation/polish/MD_focus_PER_l_polish.yml
+++ b/localisation/polish/MD_focus_PER_l_polish.yml
@@ -1165,9 +1165,9 @@
  development_plan_industry_focus_choice: "Przemysł"
  development_plan_science_focus_choice: "Nauka"
  development_plan_military_focus_choice: "Wojskowy"
- PER_military_parade.1: "Parada wojskowa w Teheranie"
- PER_military_parade.1.t: "Parada wojskowa w Teheranie"
- PER_military_parade.1.d: "Dzisiaj w Teheranie odbyła się wielka defilada wojskowa i odsłonięto nasz nowy sprzęt, aby zarówno nasz naród, jak i wrogowie Iranu byli świadomi naszej dużej siły militarnej."
+ iranian_events.100: "Parada wojskowa w Teheranie"
+ iranian_events.100.t: "Parada wojskowa w Teheranie"
+ iranian_events.100.d: "Dzisiaj w Teheranie odbyła się wielka defilada wojskowa i odsłonięto nasz nowy sprzęt, aby zarówno nasz naród, jak i wrogowie Iranu byli świadomi naszej dużej siły militarnej."
  PER_military_parade.1.o1: "Boże!"
  PER_contact_with_countries.1: "Zobacz granicę Atrak"
  PER_contact_with_countries.1.t: "Zobacz granicę Atrak"
@@ -5439,10 +5439,10 @@
  PER_promotion_of_militaristic_ideals: "Promocja ideałów militarnych"
  PER_promotion_of_militaristic_ideals_desc: "Decyzja ta zostanie ponownie udostępniona za 180 dni."
  PER_appoint_new_prime_minister: "Powołaj nowego premiera"
- PER_prime_minister.401.t: "Nowy Premier"
- PER_prime_minister.401.d: "Wydaje się, że obecny premier nam się nie podoba i być może najlepiej będzie, gdybyśmy go zastąpili kimś, kto może sprawować się lepiej. Uniemożliwi nam to powołanie nowego premiera na rok."
- PER_prime_minister.401.a: "Zacząć robić"
- PER_prime_minister.401.b: "Nieważne"
+ PER_majlis.401.t: "Nowy Premier"
+ PER_majlis.401.d: "Wydaje się, że obecny premier nam się nie podoba i być może najlepiej będzie, gdybyśmy go zastąpili kimś, kto może sprawować się lepiej. Uniemożliwi nam to powołanie nowego premiera na rok."
+ PER_majlis.401.a: "Zacząć robić"
+ PER_majlis.401.b: "Nieważne"
  PER_prime_minister.1.t: "Pahlavi mianuje premiera"
  PER_prime_minister.1.d: "Pahlavi poszedł dalej i mianował premiera, którego uważa za odpowiedniego na to stanowisko. Dzieje się tak dlatego, że przed rewolucją w ramach kompromisu oddaliśmy Pahlaviemu kontrolę nad stanowiskiem premiera."
  PER_prime_minister.1.a: "Miejmy nadzieję, że wie, co robi"
