--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -1550,23 +1550,20 @@
  UNITED_ISLAMIC_REPUBLICS: "United Islamic Republics"
  UNITED_ISLAMIC_REPUBLICS_ADJ: "Muslim"
  UNITED_ISLAMIC_REPUBLICS_DEF: "the United Islamic Republics"
- PER_interim_government: "Revolutionary Council of Iran"
- PER_interim_government_DEF: "Revolutionary Council of Iran"
- PER_interim_government_ADJ: "Iranian"
+ PER_REB: "Revolutionary Council of Iran"
+ PER_REB_DEF: "Revolutionary Council of Iran"
+ PER_REB_ADJ: "Iranian"
  PER_iranic_federation: "Iranic Confederation"
  PER_iranic_federation_DEF: "the Iranic Confederation"
  PER_iranic_federation_ADJ: "Iranic"
- PER_highway_nation: "Imperial State of Highwaystan"
- PER_highway_nation_DEF: "the Imperial State of Highwaystan"
- PER_highway_nation_ADJ: "Highwaystani"
  IKR_pjak_state: "Kurdish Life Party"
  IKR_pjak_state_DEF: "the Kurdish Life Party"
  IKR_pjak_state_ADJ: "Kurdish"
  PER_mek_flag: "NCRI"
  PER_mek_flagt_DEF: "NCRI"
  PER_mek_flag_ADJ: "Iranian"
- PER_mullahs_government: "Islamic Republic of Iran"
- PER_mullahs_government_DEF: "Islamic Republic of Iran"
+ PER_mullahs_government: "Resistance Committee of the Islamic Republic"
+ PER_mullahs_government_DEF: "the Resistance Committee of the Islamic Republic"
  PER_mullahs_government_ADJ: "Iranian"
  PER_komola: "Komala"
  PER_komola_DEF: "Komala"
@@ -1577,21 +1574,12 @@
  PER_republic_tag: "Republic of Iran"
  PER_republic_tag_DEF: "the Republic of Iran"
  PER_republic_tag_ADJ: "Iranian"
- PER_free_republic: "Free Forces of Iran"
- PER_free_republic_DEF: "the Free Forces of Iran"
- PER_free_republic_ADJ: "Iranian"
  BLC_jandullah: "Jundallah"
  BLC_jandullah_DEF: "Jundallah"
  BLC_jandullah_ADJ: "Balochi"
  PER_ASMLA: "ASMLA"
  PER_ASMLA_DEF: "ASMLA"
  PER_ASMLA_ADJ: "Arabistani"
- PER_pan_iranist_front: "Unified Iranian Front"
- PER_pan_iranist_front_DEF: "the Unified Iranian Front"
- PER_pan_iranist_front_ADJ: "Iranian"
- PER_imperial_restoration_movement: "Imperial Coalition"
- PER_imperial_restoration_movement_DEF: "the Imperial Coalition"
- PER_imperial_restoration_movement_ADJ: "Iranian"
  south_azeri_tag: "South Azerbaijan"
  south_azeri_tag_DEF: "South Azerbaijan"
  south_azeri_tag_ADJ: "South Azeri"
@@ -1607,109 +1595,16 @@
  PER_Zoroastrian_Empire_Flag: "Iranshahr"
  PER_Zoroastrian_Empire_Flag_DEF: "Iranshahr"
  PER_Zoroastrian_Empire_Flag_ADJ: "Iranian"
-# ARTESH AUTHORITY TAGS
- PER_ARTESH_CONTROL: "Artesh Authority of Iran"
- PER_ARTESH_CONTROL_DEF: "the Artesh Authority of Iran"
- PER_ARTESH_CONTROL_ADJ: "Iranian"
- SYR_ARTESH_CONTROL: "Syrian Artesh Authority"
- SYR_ARTESH_CONTROL_DEF: "the Syrian Artesh Authority"
- SYR_ARTESH_CONTROL_ADJ: "Syrian"
- IRQ_ARTESH_CONTROL: "Iraqi Artesh Authority"
- IRQ_ARTESH_CONTROL_DEF: "the Iraqi Artesh Authority"
- IRQ_ARTESH_CONTROL_ADJ: "Iraqi"
- TUR_ARTESH_CONTROL: "Turkish Artesh Authority"
- TUR_ARTESH_CONTROL_DEF: "the Turkish Artesh Authority"
- TUR_ARTESH_CONTROL_ADJ: "Turkish"
- PAK_ARTESH_CONTROL: "Pakistani Artesh Authority"
- PAK_ARTESH_CONTROL_DEF: "the Pakistani Artesh Authority"
- PAK_ARTESH_CONTROL_ADJ: "Pakistani"
- AFG_ARTESH_CONTROL: "Afghan Artesh Authority"
- AFG_ARTESH_CONTROL_DEF: "the Afghan Artesh Authority"
- AFG_ARTESH_CONTROL_ADJ: "Afghan"
- ARM_ARTESH_CONTROL: "Armenian Artesh Authority"
- ARM_ARTESH_CONTROL_DEF: "the Armenian Artesh Authority"
- ARM_ARTESH_CONTROL_ADJ: "Armenian"
- AZE_ARTESH_CONTROL: "Azeri Artesh Authority"
- AZE_ARTESH_CONTROL_DEF: "the Azeri Artesh Authority"
- AZE_ARTESH_CONTROL_ADJ: "Azeri"
- TRK_ARTESH_CONTROL: "Turkmen Artesh Authority"
- TRK_ARTESH_CONTROL_DEF: "the Turkmen Artesh Authority"
- TRK_ARTESH_CONTROL_ADJ: "Turkmen"
- KUR_ARTESH_CONTROL: "Kurdish Artesh Authority"
- KUR_ARTESH_CONTROL_DEF: "the Kurdish Artesh Authority"
- KUR_ARTESH_CONTROL_ADJ: "Kurdish"
-# Iranian Governates
- PER_IRQ_GOVERNATE: "Iranian Governate of Iraq"
- PER_IRQ_GOVERNATE_ADJ: "the Iranian Governate of Iraq"
- PER_IRQ_GOVERNATE_DEF: "Iraqi"
- PER_SYR_GOVERNATE: "Iranian Governate of Syria"
- PER_SYR_GOVERNATE_ADJ: "the Iranian Governate of Syria"
- PER_SYR_GOVERNATE_DEF: "Syrian"
- PER_KUR_GOVERNATE: "Iranian Governate of Kurdistan"
- PER_KUR_GOVERNATE_ADJ: "the Iranian Governate of Kurdistan"
- PER_KUR_GOVERNATE_DEF: "Kurdish"
- PER_TUR_GOVERNATE: "Iranian Governate of Turkey"
- PER_TUR_GOVERNATE_ADJ: "the Iranian Governate of Turkey"
- PER_TUR_GOVERNATE_DEF: "Turkish"
- PER_TRK_GOVERNATE: "Iranian Governate of Turkmenistan"
- PER_TRK_GOVERNATE_ADJ: "the Iranian Governate of Turkmenistan"
- PER_TRK_GOVERNATE_DEF: "Turkmen"
- PER_UZB_GOVERNATE: "Iranian Governate of Uzbekistan"
- PER_UZB_GOVERNATE_ADJ: "the Iranian Governate of Uzbekistan"
- PER_UZB_GOVERNATE_DEF: "Uzbek"
- PER_AZE_GOVERNATE: "Iranian Governate of Azerbaijan"
- PER_AZE_GOVERNATE_ADJ: "the Iranian Governate of Azerbaijan"
- PER_AZE_GOVERNATE_DEF: "Azeri"
- PER_ARM_GOVERNATE: "Iranian Governate of Armenia"
- PER_ARM_GOVERNATE_ADJ: "the Iranian Governate of Armenia"
- PER_ARM_GOVERNATE_DEF: "Armenian"
- PER_GEO_GOVERNATE: "Iranian Governate of Georgia"
- PER_GEO_GOVERNATE_ADJ: "the Iranian Governate of Georgia"
- PER_GEO_GOVERNATE_DEF: "Georgian"
- PER_PAK_GOVERNATE: "Iranian Governate of Pakistan"
- PER_PAK_GOVERNATE_ADJ: "the Iranian Governate of Pakistan"
- PER_PAK_GOVERNATE_DEF: "Pakistani"
- PER_AFG_GOVERNATE: "Iranian Governate of Afghanistan"
- PER_AFG_GOVERNATE_ADJ: "the Iranian Governate of Afghanistan"
- PER_AFG_GOVERNATE_DEF: "Afghan"
- PER_TAJ_GOVERNATE: "Iranian Governate of Tajikistan"
- PER_TAJ_GOVERNATE_ADJ: "the Iranian Governate of Tajikistan"
- PER_TAJ_GOVERNATE_DEF: "Tajik"
- PER_JOR_GOVERNATE: "Iranian Governate of Jordan"
- PER_JOR_GOVERNATE_ADJ: "the Iranian Governate of Jordan"
- PER_JOR_GOVERNATE_DEF: "Arab"
- PER_LEB_GOVERNATE: "Iranian Governate of Lebanon"
- PER_LEB_GOVERNATE_ADJ: "the Iranian Governate of Lebanon"
- PER_LEB_GOVERNATE_DEF: "Arab"
- PER_BHR_GOVERNATE: "Iranian Governate of Bahrain"
- PER_BHR_GOVERNATE_ADJ: "the Iranian Governate of Bahrain"
- PER_BHR_GOVERNATE_DEF: "Arab"
- PER_UAE_GOVERNATE: "Iranian Governate of the United Arab Emirates"
- PER_UAE_GOVERNATE_ADJ: "the Iranian Governate of the United Arab Emirates"
- PER_UAE_GOVERNATE_DEF: "Arab"
- PER_PAL_GOVERNATE: "Iranian Governate of Palestine"
- PER_PAL_GOVERNATE_ADJ: "the Iranian Governate of Palestine"
- PER_PAL_GOVERNATE_DEF: "Arab"
- PER_ISR_GOVERNATE: "Iranian Governate of Israel"
- PER_ISR_GOVERNATE_ADJ: "the Iranian Governate of Israel"
- PER_ISR_GOVERNATE_DEF: "Israeli"
- PER_EGY_GOVERNATE: "Iranian Governate of Egypt"
- PER_EGY_GOVERNATE_ADJ: "the Iranian Governate of Egypt"
- PER_EGY_GOVERNATE_DEF: "Egyptian"
-# # # # #
  #IRQ
  IRQ_sunni_revolt_name: "Iraqi Freedom Front"
  IRQ_sunni_revolt_name_DEF: "the Iraqi Freedom Front"
  IRQ_sunni_revolt_name_ADJ: "Iraqi"
-
  IRQ_shia_revolt: "Jaysh Al-Mahdi"
  IRQ_shia_revolt_DEF: "Jaysh Al-Mahdi"
  IRQ_shia_revolt_ADJ: "Iraqi"
-
  IRQ_badr_revolt: "Munazzama Badr"
  IRQ_badr_revolt_DEF: "Munazzama Badr"
  IRQ_badr_revolt_ADJ: "Iraqi"
-# # # # #
  #BAN
  BAN_REB_democratic: "Bangladesh Armed Forces"
  BAN_REB_democratic_ADJ: "Bangladeshi"
