--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3116,8 +3116,8 @@
 
  PER_fascism: "Iran"
  PER_fascism_DEF: "Iran"
- PER_democratic: "Republic of Iran"
- PER_democratic_DEF: "the Republic of Iran"
+ PER_democratic: "Iran"
+ PER_democratic_DEF: "Iran"
  PER_neutrality: "Iran"
  PER_neutrality_DEF: "Iran"
  PER_communism: "Iran"
