--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -1150,10 +1150,10 @@
  development_plan_industry_focus_choice: "Industry"
  development_plan_science_focus_choice: "Science"
  development_plan_military_focus_choice: "Military"
- PER_military_parade.1: "Tehran Military Parade"
- PER_military_parade.1.t: "Tehran Military Parade"
- PER_military_parade.1.d: "Today, a large military parade was held in Tehran and our new equipment was unveiled so that both our nation and Iran's enemies are aware of our high military power."
- PER_military_parade.1.o1: "Godrat!"
+ iranian_events.100: "Tehran Military Parade"
+ iranian_events.100.t: "Tehran Military Parade"
+ iranian_events.100.d: "Today, a large military parade was held in Tehran and our new equipment was unveiled so that both our nation and Iran's enemies are aware of our high military power."
+ iranian_events.100.o1: "Godrat!"
  PER_contact_with_countries.1: "See to the Atrak border"
  PER_contact_with_countries.1.t: "See to the Atrak border"
  PER_contact_with_countries.1.d: "[PER.GetName] has offered us to hold a political meeting on the Atrak River border and talk to them about diplomatic and trade issues. Do we accept their invitation?"
@@ -5221,10 +5221,10 @@
  PER_promotion_of_militaristic_ideals: "Promotion of Militaristic Ideals"
  PER_promotion_of_militaristic_ideals_desc: "This decision will be made available again in 180 days."
  PER_appoint_new_prime_minister: "Appoint a New Prime Minister"
- PER_prime_minister.401.t: "The New Prime Minister"
- PER_prime_minister.401.d: "It seems that the current prime minister is not to our liking, and perhaps it would be best for us to replace him with someone that may perform better. Doing so will prevent us from setting a new prime minister for 1 year."
- PER_prime_minister.401.a: "Go Ahead"
- PER_prime_minister.401.b: "Nevermind"
+ PER_majlis.401.t: "The New Prime Minister"
+ PER_majlis.401.d: "It seems that the current prime minister is not to our liking, and perhaps it would be best for us to replace him with someone that may perform better. Doing so will prevent us from setting a new prime minister for 1 year."
+ PER_majlis.401.a: "Go Ahead"
+ PER_majlis.401.b: "Nevermind"
  PER_prime_minister.1.t: "Pahlavi Appoints Prime Minister"
  PER_prime_minister.1.d: "Pahlavi has gone ahead and appointed a Prime Minister that he sees fit for the post. This is because we gave up our control of the Prime Ministerial Position to Pahlavi before the revolution as a compromise."
  PER_prime_minister.1.a: "Lets hope he knows what hes doing"
