--- a/localisation/russian/MD_focus_PER_l_russian.yml
+++ b/localisation/russian/MD_focus_PER_l_russian.yml
@@ -1150,10 +1150,10 @@
  development_plan_industry_focus_choice: "Промышленность"
  development_plan_science_focus_choice: "Наука"
  development_plan_military_focus_choice: "Армия"
- PER_military_parade.1: "Военный парад в Тегеране"
- PER_military_parade.1.t: "Военный парад в Тегеране"
- PER_military_parade.1.d: "Сегодня в Тегеране прошел большой военный парад и была представлена наша новая техника, чтобы и наша страна, и враги Ирана знали о нашей высокой военной мощи."
- PER_military_parade.1.o1: "Ура!"
+ iranian_events.100: "Военный парад в Тегеране"
+ iranian_events.100.t: "Военный парад в Тегеране"
+ iranian_events.100.d: "Сегодня в Тегеране прошел большой военный парад и была представлена наша новая техника, чтобы и наша страна, и враги Ирана знали о нашей высокой военной мощи."
+ iranian_events.100.o1: "Ура!"
  PER_contact_with_countries.1: "Встреча на реке Атрак"
  PER_contact_with_countries.1.t: "Встреча на реке Атрак"
  PER_contact_with_countries.1.d: "[PER.GetName] предложило нам провести политическую встречу на границе реки Атрак и поговорить с ними о дипломатических и торговых вопросах. Принимаем ли мы их приглашение?"
@@ -5221,10 +5221,10 @@
  PER_promotion_of_militaristic_ideals: "Продвижение милитаристских идеалов"
  PER_promotion_of_militaristic_ideals_desc: "Это решение будет вновь доступно через 180 дней."
  PER_appoint_new_prime_minister: "Назначить нового премьер-министра"
- PER_prime_minister.401.t: "Новый премьер-министр"
- PER_prime_minister.401.d: "Похоже, что нынешний премьер-министр нам не по душе, и, возможно, будет лучше заменить его кем-то, кто может работать лучше. Это позволит нам не назначать нового премьер-министра в течение 1 года."
- PER_prime_minister.401.a: "Вперёд"
- PER_prime_minister.401.b: "Неважно"
+ PER_majlis.401.t: "Новый премьер-министр"
+ PER_majlis.401.d: "Похоже, что нынешний премьер-министр нам не по душе, и, возможно, будет лучше заменить его кем-то, кто может работать лучше. Это позволит нам не назначать нового премьер-министра в течение 1 года."
+ PER_majlis.401.a: "Вперёд"
+ PER_majlis.401.b: "Неважно"
  PER_prime_minister.1.t: "Пехлеви назначает премьер-министра"
  PER_prime_minister.1.d: "Пехлеви пошёл дальше и назначил премьер-министра, которого он считает подходящим для этой должности. Это произошло потому, что мы уступили контроль над должностью премьер-министра Пехлеви до революции в качестве компромисса."
  PER_prime_minister.1.a: "Будем надеяться, что он знает, что делает"
