--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -1093,10 +1093,10 @@
  development_plan_industry_focus_choice: "工业"
  development_plan_science_focus_choice: "科学"
  development_plan_military_focus_choice: "军事"
- PER_military_parade.1: "德黑兰阅兵"
- PER_military_parade.1.t: "德黑兰阅兵"
- PER_military_parade.1.d: "今天，德黑兰举行了盛大的阅兵式，我们的新装备亮相，让我们国家和伊朗的敌人都意识到我们强大的军事力量。"
- PER_military_parade.1.o1: "好！"
+ iranian_events.100: "德黑兰阅兵"
+ iranian_events.100.t: "德黑兰阅兵"
+ iranian_events.100.d: "今天，德黑兰举行了盛大的阅兵式，我们的新装备亮相，让我们国家和伊朗的敌人都意识到我们强大的军事力量。"
+ iranian_events.100.o1: "好！"
  PER_contact_with_countries.1: "前往阿特拉克边境"
  PER_contact_with_countries.1.t: "前往阿特拉克边境"
  PER_contact_with_countries.1.d: "[PER.GetName]我们在阿特拉克河边境举行政治会议，与他们讨论外交和贸易问题。我们接受他们的邀请吗?"
@@ -5082,10 +5082,10 @@
  PER_promotion_of_militaristic_ideals: "宣传军国主义思想"
  PER_promotion_of_militaristic_ideals_desc: "这一决议将在180天后再次可用。"
  PER_appoint_new_prime_minister: "任命一位新首相"
- PER_prime_minister.401.t: "新首相"
- PER_prime_minister.401.d: "现在的总理似乎不符合我们的口味，也许我们最好换一个表现更好的人来代替他。如果这样做，我们将在1年内无法选出新总理。"
- PER_prime_minister.401.a: "请继续"
- PER_prime_minister.401.b: "毋需在意"
+ PER_majlis.401.t: "新首相"
+ PER_majlis.401.d: "现在的总理似乎不符合我们的口味，也许我们最好换一个表现更好的人来代替他。如果这样做，我们将在1年内无法选出新总理。"
+ PER_majlis.401.a: "请继续"
+ PER_majlis.401.b: "毋需在意"
  PER_prime_minister.1.t: "巴列维任命首相"
  PER_prime_minister.1.d: "巴列维已经任命了一位他认为适合这一职位的首相。这是因为我们在革命前将总理职位的控制权让给了巴列维作为妥协。"
  PER_prime_minister.1.a: "希望他知道自己在做什么。"
