Changelog + Iranian fixes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -76,9 +76,15 @@ v1.10.3
   - Fixed the inability to ban the Moderate Islamists as a non-Muslim nation (gotta ban the Islamists)
   - Fixed Eastern Europe graphical culture wrongly assigned to Asian countries
   - Fixed incorect Polish army general portraits
+  - Fixed a bug where the Iraqi flag was displayed incorrectly
+  - Fixed a bug where Kurdish soldiers were starting on Iraqi territory
+  - Fixed Jay Garner being captured by American forces instead of Saddam
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
+  - Reworked Irans Parliament system
+  - Adjusted the Turkish PKK mechanic in order to allow you to end the insurgency if compliance is 100% in Kurdish states
+  - New event chain for Iraq if it goes down the Shi'ite path
   - Reworked Botswana's anti-poaching mechanic to be less of a clickfest
   - Reworked modifiers of Coal Powered Nation/Renewable Powered Nation for Botswana
   - Rebalanced a lot of Botswana's tree (focus durations, monetary costs, bonuses etc.)
