--- a/localisation/english/MD_focus_PER_l_english.yml
+++ b/localisation/english/MD_focus_PER_l_english.yml
@@ -3045,7 +3045,7 @@
  PER_azeri_civilwar_defence: "Civilwar Shocks"
  PER_plain_clothes_officers: "Plain Clothes Officers"
  PER_plain_clothes_officers2: "Plain Clothes Officers"
- PER_plain_clothes_officers3: ""Friendly" Medias"
+ PER_plain_clothes_officers3: "Friendly Medias"
  PER_mili_structure: "Paramilitary Structure"
  PER_white_revolution: "[ROOT.PER_engelab_sefid_name_idea]"
  PER_engelab_sefid_name_idea: "The 2nd White Revolution"
