--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2309,7 +2309,7 @@
  GER_generic_spending_laws: "Government Public Budget"
  GER_generic_spending_laws_desc: "The Government public budget is the public tax funds which provides funding to our public services sector which includes; §Yhealthcare§!, §Yeducation§! & §Yinternal security§!."
  GER_Bundeswehr_modifier: "Bundeswehr"
-  GER_Bundeswehr_modifier_desc: "this Modifier show you all the benefits you get for your Army from focus"
+ GER_Bundeswehr_modifier_desc: "This Modifier will show you all the benefits you get for your Army from the focuses you take"
 
 ### Opinion Modifiers
  mykonos_judgement: "Mykonos Judgement"
@@ -2411,11 +2411,11 @@
  GER_decrease_rightist_status_by_3: "The status of §HDepartment 2§! will §Rdecrease§! by §H3§!"
  GER_decrease_rightist_status_by_2: "The status of §HDepartment 2§! will §Rdecrease§! by §H2§!"
  GER_decrease_rightist_status_by_1: "The status of §HDepartment 2§! will §Rdecrease§! by §H1§!"
- GER_swis_uprising: "§Y[ROOT.GetFlag]Germans§! §gof§! §R[SWI.GetNameWithFlag]§! §gwill launch an uprising in favor of a§! §Ymonarchy§! §g!§!"
- GER_belg_uprising: "§Y[ROOT.GetFlag]Germans§! §gof§! §Y[BEL.GetNameWithFlag]§! §gwill launch an uprising in favor of a§! §Ymonarchy§! §g!§!"
- GER_austrian_uprising: "§Y[ROOT.GetFlag]Germans§! §gof§! §R[AUS.GetNameWithFlag]§! §gwill launch an uprising in favor of a§! §Ymonarchy§! §g!§!"
+ GER_swis_uprising: "§Y[ROOT.GetFlag]Germans§! §gof§! §R[SWI.GetNameWithFlag]§! §gwill launch an uprising in favor of a§! §Ymonarchy§!§g!§!"
+ GER_belg_uprising: "§Y[ROOT.GetFlag]Germans§! §gof§! §Y[BEL.GetNameWithFlag]§! §gwill launch an uprising in favor of a§! §Ymonarchy§!§g!§!"
+ GER_austrian_uprising: "§Y[ROOT.GetFlag]Germans§! §gof§! §R[AUS.GetNameWithFlag]§! §gwill launch an uprising in favor of a§! §Ymonarchy§!§g!§!"
  GER_royal_puppet: "§gA§! §YGerman Puppet State§! §gwill be§! §CEstablished§!"
- GER_more_likely_to_accept: "§gThey will be§! §GMore Likely§! §gto§! §GAccept§! §gour request, if we have§! §YBetter Relations§! §gwith them§! §g!§!"
+ GER_more_likely_to_accept: "§gThey will be§! §GMore Likely§! §gto§! §GAccept§! §gour request, if we have§! §YBetter Relations§! §gwith them§!§g!§!"
  GER_united_truly_TT: "The divide between §HEast and West§! will be §Gclosed§!. [GER.GetFlag] §H[GER.GetName]§! will be truly united under one flag!"
  GER_migrants_move: "§H18,000§! citizens will §Rmove§! from §HEastern§! states to the §HWestern§! ones, but §HEast German§! productivity may be §Rhurt§!!"
  GER_invest_in_western_voters_variable_tooltip: "By doing this focus you will §Gincrease your West Satisfaction by 1.§! §YWest Satisfaction is currently at [?west_satisfaction].§!"
