Loc fix for GER

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -110,7 +110,7 @@ v1.10.3
   - Partial equipment GFX + 3D models update for Poland, Czech, Kurdistan, Israel, Hezbollah, Iraq, Russia, USA
   - 80+ high quality Aces portraits for Asia and USA
   - Set of new landmarks. Eiffel tower: Golden Gate, Basil Cathedral, Christ Redeemer, Statue of Liberty, Capitol and Obelisk, Kabaah, Dome of the Rock, Great wall,
-    Pyramids, Empire States Building, Okayama Castle, Himeji Castle, and Fujisan
+  Pyramids, Empire States Building, Okayama Castle, Himeji Castle, and Fujisan
   - Set of new generic modern buildings. Airport, Naval Base, Supply Base, Factory
 
  Localisation
@@ -120,7 +120,7 @@ v1.10.3
   - Fixed a number of small typoes in the Nigerian focus tree and the events
   - Fixed a option for the event issue showing the wrong localization in the Operation Secure Tomorrow event
   - Added a trigger tooltip for Indonesia's Invest in our Policies focus
-
+  - Re-added missing loc strings in the German tree (They got deleted for some reason?)
  Map:
   - Complete Graphical rework of the map
   - Add Abu Musa Isles
