--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -20,6 +20,10 @@
  GER_Restructure_Infrastructure_desc: "The divide in German infrastructure from the rest of the world is still quite apparent, we must improve it greatly if we are to compete in the best European countries list."
  GER_Deutsche_Post: "Reform Deutsche Bundespost"
  GER_Deutsche_Post_desc: "The German Bundespost was split in three separate branches, but we need to continue the Reforms to form a modern Communication System in the Bundesrepublik Deutschland and ensure people get their bills and tax letters!"
+ GER_strengthen_the_service_sector: "Strengthen the Service Sector"
+ GER_strengthen_the_service_sector_desc: "We must strengthen the service sector in order to fully modernize our economy."
+ GER_european_business_opportunities: "European Business Opportunities"
+ GER_european_business_opportunities_desc: "By opening our economy to the rest of Europe, we will be able to fully utilize investments and opportunities provided by the new investment pool."
  GER_Deutsche_Post_AG: "Deutsche Post AG"
  GER_Deutsche_Post_AG_desc: "Deutsche Post AG is a German postal service and courier company. It provides mail and parcel delivery services in Germany and worldwide."
  GER_DHL: "DHL"
@@ -2147,8 +2151,8 @@
  GER_upgraded_mining_equipment: "Upgraded Mining Equipment"
  GER_generic_spending_laws: "Government Public Budget"
  GER_generic_spending_laws_desc: "The Government public budget is the public tax funds which provides funding to our public services sector which includes; §Yhealthcare§!, §Yeducation§! & §Yinternal security§!."
- GER_Bundeswehr_modifier: "Bundeswehr"
- GER_Bundeswehr_modifier_desc: "this Modifier show you all the benefits you get for your Army from focus"
+ GER_Bundeswehr_modifier: "State of the Bundeswehr"
+ GER_Bundeswehr_modifier_desc: "This Modifier will show you all the benefits you get for the Bundeswehr (Army) from focuses you take"
 
 ### Opinion Modifiers
  GER_great_negative_opinion: "§RGreat Negative Opinion§!"
