--- a/Changelog.txt
+++ b/Changelog.txt
@@ -37,6 +37,7 @@ v1.10.3
   - Rebalanced some of China's Communist Cadres and Military gain to make it easier to do specific things
   - Slightly increased manpower given by mobilization
   - Made it so that you need to be friendly with Russia to pass through the Volga-Don Canal
+  - Changed weights of units for traits and icons
 
  Bugfix:
   - Fixed a couple focuses for France where the Stage: focuses were going to the wrong continent
